# Thasia

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: publish.yml
Anasthasia/: COMPONENTS.md  README.md
assets/: pfp.avif
crates/thasia-cli/: Cargo.toml
crates/thasia-cli/src/: main.rs
crates/thasia-core/: Cargo.toml
crates/thasia-core/src/: error.rs  lib.rs  models.rs  plan.rs  prelude.rs  sanitize.rs
crates/thasia-dist/: Cargo.toml
crates/thasia-dist/src/: main.rs
crates/thasia-packager/: Cargo.toml
crates/thasia-packager/src/: cbz.rs  epub.rs  error.rs  lib.rs  raw.rs
crates/thasia-packager/templates/: comic_info.xml  epub_page.xhtml
crates/thasia-parser/: Cargo.toml
crates/thasia-parser/src/: classifier.rs  lexer.rs  lib.rs  resolver.rs  rules.rs
crates/thasia-processor/: Cargo.toml
crates/thasia-processor/src/: error.rs  lib.rs  pipeline.rs  retry.rs  transform.rs
crates/thasia-processor/src/encode/: avif.rs  constants.rs  grayscale.rs  mod.rs  webp.rs
crates/thasia-processor/src/pipeline/: encode.rs  mod.rs
crates/thasia-processor/src/transform/: color.rs  filters.rs  mod.rs  resize.rs  tones.rs
crates/thasia-source/: Cargo.toml
crates/thasia-source/src/: error.rs  gallerydl.rs  lib.rs  local.rs  prelude.rs
crates/thasia-source/src/suwayomi/: client.rs  installer.rs  manager.rs  mod.rs  types.rs
crates/thasia-ui/: Cargo.toml
crates/thasia-ui/src/: actions.rs  app.rs  error.rs  main.rs  models.rs  theme.rs  updater.rs
crates/thasia-ui/src/components/: mod.rs  page_header.rs  stat_card.rs
crates/thasia-ui/src/services/: discovery.rs  mod.rs  pipeline_plan.rs  scan.rs
crates/thasia-ui/src/services/conversion/: mod.rs  page_edits.rs  runner.rs  volume.rs
crates/thasia-ui/src/state/: mod.rs
crates/thasia-ui/src/util/: logging.rs  mod.rs  paths.rs  runtime.rs  settings.rs  single_instance.rs  window_state.rs
crates/thasia-ui/src/views/: discover.rs  home.rs  mod.rs  settings.rs  workspace.rs
docs/: design.md
docs/superpowers/plans/: 2026-04-18-tauri-ui.md  2026-04-22-keyboard-engine.md
docs/superpowers/specs/: 2026-04-18-tauri-ui-design.md  2026-04-22-keyboard-engine-design.md
impl-docs/: 00-overview.md  01-architecture.md  02-state-management.md  03-ipc-replacement.md  04-image-rendering.md  05-async-and-events.md  06-window-bundling-dock.md  07-navigation-keyboard.md  08-dialogs-opener.md  09-ui-component-mapping.md  10-cargo-setup.md  11-convert-wizard.md  12-discover-view.md  13-auto-updater.md  14-persistence-paths.md  15-distribution.md  README.md
scripts/: oneoff_pfp_branding.py
src/: app.css  app.html  lumi-flavour.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: core.json  dialog.json  opener.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_error.rs  events.rs  lib.rs  main.rs  pipeline_plan.rs  protocol.rs  state.rs  tracing_setup.rs
src-tauri/src/commands/: cancel.rs  convert.rs  discovery.rs  mod.rs  scan.rs
src-tauri/src/conversion/: events.rs  mod.rs  page_edits.rs  runner.rs  volume.rs
src/components/: Sidebar.svelte
src/components/download/: DiscoveryServerPanel.svelte  DownloadProgress.svelte  ResultGrid.svelte  SearchBar.svelte  SelectedSeriesPane.svelte  SeriesDetail.svelte  SourcePicker.svelte
src/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Input.svelte  Kbd.svelte  KeyComboDisplay.svelte  KeyHintBar.svelte  ProgressBar.svelte  SectionLabel.svelte  SegmentedControl.svelte  Select.svelte  Toggle.svelte  index.ts
src/components/wizard/: EncodingControls.svelte  Step1Source.svelte  Step2Destination.svelte  Step3Format.svelte  Step3ImageFormat.svelte  Step4Container.svelte  Step5Direction.svelte  Step6Bundling.svelte  Step7PageEditor.svelte  Step8Review.svelte  Step9Convert.svelte  StepVolumeReview.svelte  WizardStep.svelte
src/flavours/: auric-noir.css
src/lib/: discovery-settings.ts  errors.ts  keyboard.ts  keyhint.svelte.ts  settings.ts  theme.svelte.ts  transitions.ts  ui-prefs.svelte.ts
src/lib/download/: state.svelte.ts
src/lib/sidebar/: state.svelte.ts
src/lib/wizard/: payload.ts  state.svelte.ts  steps.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/convert/: +page.svelte
src/routes/discover/: +page.svelte
src/routes/download/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/discovery/: +page.svelte
src/types/: bindings.ts
static/brand/: pfp.avif
