[workspace]
members = [
    "crates/thasia-core",
    "crates/thasia-packager",
    "crates/thasia-parser",
    "crates/thasia-processor",
    "crates/thasia-source",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.1"
authors = ["LuMiSxh"]
license = "BSD-3 Clause"
repository = "https://github.com/LuMiSxh/Thasia"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
rayon = "1.12"
logos = "0.16"
backoff = { version = "0.4", features = ["tokio"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-indicatif = "0.3"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "avif",
    "nasm",
] }
walkdir = "2.5"
tempfile = "3.27"
async-trait = "0.1"
ravif = "0.13"
rav1e = { version = "0.8", default-features = false }
webp = "0.3"
avif-decode = { version = "1.0.2", default-features = false }
epub-builder = "0.8"
zip = "8.6"
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
ordered-float = "5"
url = "2"
regex = "1"
natord = "1"
memmap2 = "0.9"
