[package]
name = "thasia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[lib]
name = "thasia_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
thasia-core = { path = "../crates/thasia-core", features = ["tauri"] }
thasia-source = { path = "../crates/thasia-source" }
thasia-parser = { path = "../crates/thasia-parser" }
thasia-processor = { path = "../crates/thasia-processor" }
thasia-packager = { path = "../crates/thasia-packager" }

tauri = { version = "2.11", features = [] }
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { workspace = true }
specta-typescript = "0.0.11"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
dirs = "5"
url = { workspace = true }
urlencoding = "2.1"
ordered-float = { workspace = true }
tempfile = { workspace = true }
serde_json = "1"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

[dev-dependencies]
