[package]
name = "thasia-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[[bin]]
name = "thasia-cli"
path = "src/main.rs"

[dependencies]
thasia-core = { path = "../thasia-core", features = ["cli"] }
thasia-parser = { path = "../thasia-parser" }
thasia-source = { path = "../thasia-source" }
thasia-processor = { path = "../thasia-processor" }
thasia-packager = { path = "../thasia-packager" }
tokio = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }
