[package]
name = "thasia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
clap = { workspace = true, optional = true }
specta = { workspace = true, optional = true }

[features]
cli = ["dep:clap"]
tauri = ["dep:specta"]
