[package]
name = "thasia-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
clap = { workspace = true, optional = true }
specta = { workspace = true, optional = true }

[features]
cli = ["dep:clap"]
tauri = ["dep:specta"]
