[package]
name = "thasia-packager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[dependencies]
thasia-core = { path = "../thasia-core" }
tokio = { workspace = true }
async_zip = { workspace = true }
async-trait = { workspace = true }
epub-builder = { workspace = true }
thiserror = { workspace = true }
