[package]
name = "thasia-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[dependencies]
thasia-core = { path = "../thasia-core" }
regex = { workspace = true }
natord = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
