[package]
name = "thasia-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[dependencies]
thasia-core = { path = "../thasia-core" }
thasia-source = { path = "../thasia-source" }
tokio = { workspace = true }
rayon = { workspace = true }
backoff = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
image = { workspace = true }
ravif = { workspace = true }
rav1e = { workspace = true }
webp = { workspace = true }
