[package]
name = "thasia-source"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[dependencies]
thasia-core = { path = "../thasia-core" }
tokio = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
natord = "1.0"
zip = { workspace = true }
