[package]
name = "thasia-source"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

repository.workspace = true

[dependencies]
thasia-core = { path = "../thasia-core" }
tokio = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
natord = "1.0"
zip = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "rustls",
] }
futures-util = "0.3"
serde_json = "1"
sha2 = "0.11"
tar = "0.4"
flate2 = "1"
urlencoding = "2.1"
regex = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
libc = "0.2"
