[package]
name = "thasia-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "thasia-gpui"
path = "src/main.rs"

[dependencies]
gpui = { package = "gpui-ce", version = "=0.3.3" }
nasrin = { git = "https://github.com/LuMiSxh/nasrin.git", tag = "v0.1.0" }
thasia-core = { path = "../thasia-core" }
thasia-packager = { path = "../thasia-packager" }
thasia-parser = { path = "../thasia-parser" }
thasia-processor = { path = "../thasia-processor" }
thasia-source = { path = "../thasia-source" }

directories = "6"
fs2 = "0.4"
open = "5"
rfd = "0.15"
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
ordered-float = { workspace = true }

[package.metadata.bundle]
name = "Thasia"
identifier = "com.lumisxh.thasia"
icon = ["../../assets/icons/icon.icns", "../../assets/icons/icon.ico"]
category = "public.app-category.utilities"
short_description = "Manga processing and conversion utility"
